--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MBTI</title>
+    <link rel="stylesheet" href="./main.css">
+    <script defer src="./main.js"></script>
 </head>
 <body>
-    <div></div>
+    <h1>안녕하세요</h1>
 </body>
 </html>
