[Add]웹페이지 나누기

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script defer src="./main.js"></script>
 </head>
 <body>
+    <!-- a누르고 탭키누르면 자동완성 -->
+    <a href="/about.html">About</a>
     <h1>안녕하세요</h1>
 </body>
 </html>
