--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,13 @@
     <link rel="stylesheet" href="./main.css">
     <script defer src="./main.js"></script>
 </head>
+
 <body>
-    <!-- a누르고 탭키누르면 자동완성 -->
-    <a href="/about.html">About</a>
-    <h1>안녕하세요</h1>
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+
+    <div class="btn">클릭해주세용</div> 
 </body>
+
 </html>
