--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MBTI</title>
+    <title>내 안에 숨어있는 작업캐 찾기!</title>
+    <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="./main.css">
     <script defer src="./main.js"></script>
 </head>
