--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>내 안에 숨어있는 작업캐 찾기!</title>
     <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="/path/to/reset-css/reset.css" />
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/variable/pretendardvariable-dynamic-subset.css" />
+    <link rel="stylesheet" href="./css/common.css">
     <script defer src="./main.js"></script>
 </head>
 
