--- a/index.html
+++ b/index.html
@@ -15,11 +15,19 @@
 </head>
 
 <body>
-    <div class="item">1</div>
-    <div class="item">2</div>
-    <div class="item">3</div>
-
-    <div class="btn">클릭해주세용</div> 
+     <h2 class="page-subtitle">
+        짱채빈
+     </h2>
+     <h1 class="page-title">내 안에 숨어있는<br>
+         직업캐 찾기!</h1>
+    <img src="./images/main_character.png" alt="캐릭터" class="character">
+    <!--  a태그같은경우 글자요소(inlin)이므로 가로,세로 너비를 지정할 수 없으므로 display:flex를 넣어주어 적용시킨다. -->
+    <a href="/questions.html" class="btn">
+        본캐 찾으러 GO!
+    </a>
+    <div class="btn">
+        주변에 알리기
+    </div>
 </body>
 
 </html>
