--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
          직업캐 찾기!</h1>
     <img src="./images/main_character.png" alt="캐릭터" class="character">
     <!--  a태그같은경우 글자요소(inlin)이므로 가로,세로 너비를 지정할 수 없으므로 display:flex를 넣어주어 적용시킨다. -->
-    <a href="/questions.html" class="btn">
+    <a href="/questions.html" class="btn btn-orange">
         본캐 찾으러 GO!
     </a>
-    <div class="btn">
+    <div class="btn btn-green btn-small">
         주변에 알리기
     </div>
 </body>
