--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/path/to/reset-css/reset.css" />
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/variable/pretendardvariable-dynamic-subset.css" />
     <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/home.css">
     <script defer src="./main.js"></script>
 </head>
 
