--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/variable/pretendardvariable-dynamic-subset.css" />
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/home.css">
-    <script defer src="./main.js"></script>
+    <script defer src="./js/share.js"></script>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
     <a href="/questions.html" class="btn btn-orange">
         본캐 찾으러 GO!
     </a>
-    <div class="btn btn-green btn-small">
+    <div class="btn btn-green btn-small share-or-copy">
         주변에 알리기
     </div>
 </body>
