--- a/questions.html
+++ b/questions.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/variable/pretendardvariable-dynamic-subset.css" />
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/questions.css">
+    <script type="module" defer src="./js/questions.js"></script>
 </head>
 
 <body>
