--- a/results.html
+++ b/results.html
@@ -11,12 +11,39 @@
     <link rel="stylesheet" href="/path/to/reset-css/reset.css" />
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/variable/pretendardvariable-dynamic-subset.css" />
     <link rel="stylesheet" href="./css/common.css">
-
+    <script defer src="./js/share.js"></script>
 
 </head>
 <body>
     <h2 class="page-subtitle">
         내 본캐는?!
     </h2>
+    <h1 class="page-title">출근시간은<br>내가정해</h1>
+    <img src="./images/result_character1.png" alt="character">
+    <div class="result">
+        <div class="box">1111</div>
+        <div class="box">2222</div>
+        <div class="box">3333</div>
+        <div class="box">4444</div>
+    </div>
+    <div class="result">
+        <h3>내가 이런 직업을 갖는다면?</h3>
+        <div class="jobs">
+            <div class="job">1111</div>
+            <div class="job">2222</div>
+        </div>
+    </div>
+    <div class="result">
+        <h3>이런 직업 강의는 어떤가요?</h3>
+        <a href="" target="_blank" class="lecture">
+            <img src="" alt="강의">
+        </a>
+    </div>
+    <div class="btn btn-green btn-small share-or-copy" >
+        결과 공유하기
+    </div>
+    <a href="/index.html" class="btn btn-gray btn-small">
+        다시 테스트하기
+    </a>
 </body>
 </html>
